# system-software-course

./: LICENSE  README.md
compiler/: CMakeLists.txt  main.cpp
compiler/src/lexer/: lexer.cpp  lexer.h
compiler/src/lexer/block/: block.cpp  block.h  extended_block.cpp  extended_block.h  simple_block.cpp  simple_block.h
compiler/src/lexer/block/blocks/for/: for_implementation.cpp  for_implementation.h
compiler/src/lexer/token/: token.cpp  token.h
compiler/src/syntaxer/: syntaxer.cpp  syntaxer.h
compiler/src/syntaxer/various_implementation/: variable.cpp  variable.h  variable_declaration.cpp  variable_declaration.h
lectures/: 1. 11.02.20.docx
lexer/: CMakeLists.txt  main.cpp
lexer/src/: lexer.cpp  lexer.h
